<resources>
    <string name="app_name">CKSample</string>
    <string name="title_activity_main">Clinical Key</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_org">Select Organization</string>
    <string name="action_books">Books</string>
    <string name="action_journals">Journals</string>
    <string name="action_multiMedia_images">MultiMedia-Images</string>
    <string name="action_multiMedia_video">MultiMedia-Videos</string>

    <string name="action_patientEdu">Patient Edu</string>
    <string name="action_medLine">MedLine</string>
    <string name="action_patientHandout">Patient Handout</string>
    <string name="action_clinicalTrial">Clinical Trial</string>
    <string name="action_MedicalProcedure">Medical Procedure</string>
    <string name="action_medicalTopic">Medical Topic</string>
    <string name="action_guidesTechniques">Guides Techniques</string>
    <string name="action_savedContent">Saved Content</string>
    <string name="action_drugMonograph">Drug Monograph</string>

    <string name="title_activity_activity2">Activity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_path_choice">PathChoiceActivity</string>

    <string name="drawer_open">Nav open</string>
    <string name="drawer_close">Nav close</string>

    <string-array name="contentTypes">
        <item>Books</item>
        <item>Journals</item>
        <item>MultiMedia-Images</item>
        <item>MultiMedia-Videos</item>

        <item>Patient Edu</item>
        <item>MedLine</item>
        <item>Patient Handout</item>
        <item>Clinical Trial</item>
        <item>Medical Procedure</item>
        <item>Medical Topic</item>
        <item>Guides Techniques</item>
        <item>Saved Content</item>
        <item>Drug Monograph</item>

    </string-array>
</resources>
